--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
@@ -10,7 +10,7 @@ body {
   justify-content: space-between;
   background-color: #1f2937;
   align-items: center;
-  padding: 0px 10%;
+  padding: 0px 15%;
 }
 .logo {
   font-size: 24px;
@@ -23,9 +23,11 @@ ul {
   display: flex;
   gap: 20px;
 }
-a {
+.secondary-text {
   font-size: 18px;
   color: #e5e7eb;
+}
+a {
   text-decoration: none;
 }
 
@@ -33,7 +35,7 @@ a {
   background-color: #1f2937;
   display: flex;
   justify-content: space-between;
-  padding: 100px 10%;
+  padding: 100px 15%;
   gap: 50px;
 }
 .hero-image {
@@ -44,13 +46,9 @@ a {
 .hero-left h1 {
   margin: 0px;
   font-size: 48px;
-  font-weight: extra-bold;
+  font-weight: 900;
   color: #f9faf8;
   flex-wrap: wrap;
-}
-.hero-left p {
-  font-size: 18px;
-  color: #e5e7eb;
 }
 
 .hero-left button {
@@ -66,4 +64,96 @@ a {
   flex: auto;
   width: 500px;
   height: 250px;
+}
+.card-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 80px;
+}
+.card-section h2 {
+  margin: 40px;
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+}
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 160px;
+  align-items: center;
+}
+.card img {
+  width: 160px;
+  height: 160px;
+  border: #3882f6 solid 3px;
+  border-radius: 20px;
+}
+.card p {
+  text-align: center;
+  color: #525964;
+}
+.quote-section {
+  background-color: #e5e7eb;
+  padding: 100px 25%;
+}
+.quote {
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  color: #1f2937;
+  margin-bottom: 0px;
+}
+.quote-author {
+  text-align: end;
+  font-size: 20px;
+  font-weight: 600;
+}
+.action-section {
+  background-color: #3882f6;
+  margin: 100px 15%;
+  display: flex;
+  border-radius: 8px;
+  padding: 40px 10%;
+  align-items: center;
+  justify-content: space-between;
+}
+.action-left {
+  color: #f9faf8;
+}
+.action-left h3 {
+  font-size: 24px;
+  margin: 0px;
+  padding: 0px;
+}
+.action-left p {
+  margin: 0px;
+  padding: 0px;
+}
+.action-right {
+}
+.action-right button {
+  background-color: #3882f6;
+  border: #f9faf8 solid 2px;
+  border-radius: 10px;
+  color: #f9faf8;
+  font-size: 18px;
+  padding: 6px 30px;
+  font-weight: bold;
+}
+.footer {
+  display: flex;
+  background-color: #1f2937;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.footer p {
+  color: #f9faf8;
+  font-size: 18px;
 }
